# wasm-demo

./: Cargo.toml  README.md  build.bat
frontend/: index.html  package.json  pnpm-lock.yaml  wasm_demo.js  wasm_demo_bg.wasm
src/: error.rs  lib.rs  restful.rs
