[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_demo"
crate-type = ["cdylib"]

[dependencies]
pest = { version = "2.7.11", features = ["std", "pretty-print"] }
pest_derive = "2.7.11"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
thiserror = "1.0.63"
wasm-bindgen = { version = "^0.2", features = ["default"] }
